<resources>
    <string name="app_name">CraftyMe</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_confirm_password">Confirm Password</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="action_dont_have_an_account_signup">Don\'t have an Account? Signup.</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="created_by_daksh_upadhyay">By Daksh Upadhyay</string>
    <string name="action_save">Save</string>
    <string name="action_logout">Logout</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_created_date">Created date</string>
    <string name="content_ddescription_add_new">Add</string>
    <string name="action_update">Update</string>
    <string name="action_delete">delete</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="Are_you_sure_delete_artwork">Are you sure you want to delete this artwork?</string>
    <string name="Are_you_sure_logout">Are you sure you want to logout?</string>
    <string name="appwidget_text">+</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Add Artwork Widget</string>

</resources>