<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme"
    tools:context=".activity.SignupActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/navbar"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Sign Up">


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/firstName"
                android:layout_width="371dp"
                android:layout_height="48dp"
                android:background="@color/white"
                android:hint="@string/prompt_first_name"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/username3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="371dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:hint="@string/prompt_last_name"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username2" />

            <EditText
                android:id="@+id/email"
                android:layout_width="371dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username3" />

            <EditText
                android:id="@+id/password"
                android:layout_width="371dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_dont_have_an_account_signup"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/password2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="371dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:hint="@string/prompt_confirm_password"
                android:imeActionLabel="@string/action_dont_have_an_account_signup"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:onClick="btnSignupAction"
                android:singleLine="true"
                android:text="@string/action_sign_up"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password2"
                app:strokeColor="@color/black" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>