<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme"
    tools:context=".activity.ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/theme"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Profile"></androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginHorizontal="40dp"
                app:srcCompat="@drawable/splash" />

            <EditText
                android:id="@+id/username2"
                android:layout_width="371dp"
                android:layout_height="48dp"
                android:background="@color/white"
                android:hint="@string/prompt_first_name"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/username3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/username3"
                android:layout_width="371dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:hint="@string/prompt_last_name"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username2" />

            <EditText
                android:id="@+id/username"
                android:layout_width="371dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:enabled="false"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/action_save"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password2"
                    app:strokeColor="@color/black" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button2"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/action_logout"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:backgroundTint="#F44336"
                    app:cornerRadius="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password2"
                    app:strokeColor="@color/black" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>